# CopilotDoc

./: .gitignore  crawler.py  main.py  pyproject.toml  test.py  test_build.ipynb  test_run.ipynb
test_resource/: Chapter 1.md  Chapter 2.md  Chapter 3.md
